# jingu-trust-gate-py

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
demo/: aha-moment-demo.tape  aha_moment_demo.py  demo.py
examples/: action_gate_policy.py  adapter_examples.py  agent_step_policy.py  bi_analytics_policy.py  ecommerce_catalog_policy.py  hpc_diagnostic_policy.py  medical_symptom_policy.py  tool_call_policy.py
examples/actions/: README.md  action_gate_policy.py
examples/answers/: README.md  legal_contract_policy.py  medical_symptom_policy.py
examples/integration/: README.md  audit_writer_example.py  downgrade_retry_example.py
examples/state/: README.md  fact_write_policy.py  memory_update_policy.py
src/jingu_trust_gate/: __init__.py  adapters.py  audit.py  conflict.py  gate.py  harness.py  policy.py  renderer.py  retry.py  trust_gate.py  types.py
src/jingu_trust_gate/helpers/: __init__.py  feedback.py  outcomes.py  rules.py  structure.py  support.py
tests/: test_gate.py
