[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jingu-trust-gate"
version = "0.1.2"
description = "A deterministic trust gate for LLM systems"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ylu999" }]
requires-python = ">=3.11"
keywords = ["llm", "trust-gate", "admission-control", "hallucination", "rag", "grounding", "policy", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ylu999/jingu-trust-gate-py"
Repository = "https://github.com/ylu999/jingu-trust-gate-py"
Issues = "https://github.com/ylu999/jingu-trust-gate-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jingu_trust_gate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
